# espurna

./: .bandit  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  ci_install.sh  ci_script.sh  custom.h.example  platformio.ini  pre-commit  travis_install.sh  travis_script.sh
.github/: CODEOWNERS  contribute.md  release_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  questions---troubleshooting.md  questions.yml
.github/workflows/: push.yml  release.yml
arduino/code/: code.ino
code/: .eslintrc.js  .gitignore  .htmlvalidate.json  .travis.yml  astyle.conf  build-all  build-data_h  build-fs  build.sh  build_data  core_version.py  debug  debug.sh  deploy  eagle.flash.1m0m1s.ld  eagle.flash.1m0m2s.ld  eagle.flash.2m1m4s.ld  eagle.flash.4m1m4s.ld  eagle.flash.4m3m4e.ld  eagle.flash.512k0m1s.ld  esp8266.flash.1m0.ld  extra_lib_ignore.py  extra_parse_defines.py  extra_script_libdeps.py  extra_script_pre.py  extra_scripts.py  flash.sh  gulpfile.js  memanalyzer.py  ota.py  ota_flash.sh  ota_list.sh  package-lock.json  package.json  pio_hooks.py  platformio.custom.ini  platformio.ini  platformio.ini.bak  platformio.official.ini  platformio_ota.ini  (+5 more)
code/.github/: stale.yml
code/data/: index.html
code/devices/: 001_generic_custom.json  002_nodemcu_lolin.json  003_wemos_d1_mini_relayshield.json  004_itead_sonoff_basic.json  005_itead_sonoff_th.json  006_itead_sonoff_sv.json  007_itead_sonoff_touch.json  008_itead_sonoff_pow.json  009_itead_sonoff_dual.json  010_itead_1ch_inching.json  011_itead_sonoff_4ch.json  012_itead_slampher.json  013_itead_s20.json  014_electrodragon_wifi_iot.json  015_workchoice_ecoplug.json  016_jangoe_wifi_relay_nc.json  017_jangoe_wifi_relay_no.json  018_openenergymonitor_mqtt_relay.json  019_jorgegarcia_wifi_relays.json  020_aithinker_ai_light.json  021_magichome_led_controller.json  022_itead_motor.json  023_tinkerman_espurna_h06.json  024_huacanxing_h801.json  025_itead_bnsz01.json  026_itead_sonoff_rfbridge.json  027_itead_sonoff_4ch_pro.json  028_itead_sonoff_b1.json  029_itead_sonoff_led.json  030_itead_sonoff_t1_1ch.json  031_itead_sonoff_t1_2ch.json  032_itead_sonoff_t1_3ch.json  033_itead_sonoff_rf.json  034_wion_50055.json  035_exs_wifi_relay_v31.json  036_huacanxing_h802.json  037_generic_v9261f.json  038_generic_ech1560.json  039_tinkerman_espurna_h08.json  040_mancavemade_esplive.json  (+46 more)
code/espurna/: DebounceEvent.cpp  IR_Bridge.ino  TZ.h  alarm.ino  alexa.cpp  alexa.h  alexa.ino  analog.ino  api.cpp  api.h  api.ino  api_async_server.h  api_common.cpp  api_impl.h  api_path.h  ascheduler.ino  blynk.ino  board.cpp  board.h  board.ino  broker.h  broker.ino  build.cpp  build.h  button.cpp  button.h  button.ino  button_config.h  compat.h  counter.ino  crash.cpp  crash.h  crash.ino  curtain_kingart.cpp  curtain_kingart.h  curtain_kingart.ino  debounce.h  debounceevent.cpp  debug.cpp  debug.h  (+251 more)
code/espurna/config/: .gitignore  all.h  arduino.h  blynk_certificate.h  build.h  buildtime.h  config.h  custom-sample.h  custom.h  custom.h.example  data.h  debug.h  defaults.h  dependencies.h  deprecated.h  device.h  general.h  hardware.h  inputfilter.h  progmem.h  prototypes.h  rtc.h  rtcmem.h  sensors.h  types.h  validate.h  version.h  webui.h
code/espurna/data/: espurna.crt  espurna.key  index.html
code/espurna/filters/: BaseFilter.h  LastFilter.h  MaxFilter.h  MedianFilter.h  MovingAverageFilter.h  SumFilter.h
code/espurna/flow/: component.h  generic.h  library.h  mqtt.h
code/espurna/garland/: anim.cpp  anim.h  animGlow.cpp  anim_assemble.cpp  anim_comets.cpp  anim_fly.cpp  anim_pixiedust.cpp  anim_randcyc.cpp  anim_run.cpp  anim_run2.cpp  anim_run2.h  (+12 more)
code/html/: README  TZ.h  TZ.js  TZall.h  TZupdate.pl  checkboxes-min.css  checkboxes-min.js  checkboxes.css  checkboxes.js  custom.css  custom.js  devices.js  grids-responsive-min.css  index.html  jquery.wheelcolorpicker-3.0.2.min.js  password.html  pure-min.css  side-menu-min.css  wheelcolorpicker.css
code/lib/: Embedis  EmonLiteESP  NoFUSSClient  RemoteSwitch
code/libraries/: README
code/scripts/: decoder.py  format_tzdata.py  generate_release_sh.py  memanalyzer.py  pio_main.py  pio_pre.py  test_build.py  tzdata.py
code/src/: Config.cpp  Config.h  button.ino  code.ino  debug.h  defaults.h  dht.ino  ds18b20.ino  emon.ino  fauxmo.ino  led.ino  main.cpp  main.ino  mqtt.ino  nofuss.ino  ntp.ino  ota.ino  pow.ino  relay.ino  rf.ino  settings.ino  version.h  web.ino  webserver.ino  websockets.ino  wifi.ino
code/test/: .gitignore  platformio.ini
code/test/unit/: CMakeLists.txt  tuya_test.cpp
code/test/unit/basic/: basic.cpp
code/test/unit/cache/: README.txt
code/test/unit/settings/: main.cpp
code/test/unit/src/: ArduinoMainOverride.cpp  unity_fixtures.c
code/test/unit/src/basic/: basic.cpp
code/test/unit/src/embedis/: embedis.cpp
code/test/unit/src/filters/: filters.cpp
code/test/unit/src/settings/: settings.cpp
code/test/unit/src/terminal/: terminal.cpp
code/test/unit/src/tuya/: tuya.cpp
code/test/unit/src/types/: types.cpp
code/test/unit/src/url/: url.cpp
code/test/unit/src/utils/: utils.cpp
code/test/unit/terminal/: terminal.cpp
code/test/unit/tuya/: tuya.cpp
code/test/unit/url/: url.cpp
code/ui/: .env.dev  .env.devpwa  .env.pwa  .eslintrc.js  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  vue.config.js
data/: index.css  index.html
docker/: Dockerfile  README.md
docs/: Configuration.md  Filesystem.md  Firmware.md  Hardware.md  OTA.md  Sensors.md  Troubleshooting.md
lib/DebounceEvent/: DebounceEvent.h
lib/RemoteSwitch/: RemoteReceiver.cpp  RemoteReceiver.h  RemoteSwitch.h  keywords.txt
schema/: espurna.brd  espurna.sch
server/: .gitignore  README.md  composer.json
server/data/: versions.json
server/public/: .htaccess  index.php
server/src/: dependencies.php  middleware.php  routes.php  settings.php
server/templates/: index.phtml
src/: code.ino
(+375 files in other folders)
